--- a/backmatter.tex
+++ b/backmatter.tex
@@ -45,6 +45,8 @@
 \acro{DAQ}[DAQ]{Data Acquisition}
 \acro{WLCG}[WLCG]{Worldwide LHC Computing Grid}
 \acro{RF}[RF]{radio frequency}
+\acro{PF}[PF]{Particle Flow}
+\acro{BDTs}[BDTs]{Boosted Decision Trees}
 \end{acronym}
 
 
